fix form visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,9 @@
 @import url(../css/elements/button.css);
 @import url(../css/elements/recomendation.css);
 @import url(../css/elements/gift.css);
+@import url(../css/elements/footer.css);
+
+
 
 html{
     font-size: var(--baseFontSize);
@@ -21,10 +24,8 @@ html{
 body{
     font-family: var(--Rounded_Mplus);
     color: var(--white);
-    
-
- 
 }
+
 header{
     position: relative;
     z-index: 0;
@@ -33,95 +34,3 @@ header{
     min-height: 47rem;
     overflow: hidden;
 }
-
-
-
-
-/* footer */
-
-.contact_us{
-position: relative;
-z-index: -5;
-    background: center/cover no-repeat url(../images/footer-back.webp) ,#00A1C3 linear-gradient(0.43deg, #135A9A 7.31%, rgba(7, 92, 132, 0) 99.7%);
-}
-
-
-.contact_us__rude{
-    position: absolute;
-    top: 250px;
-    right: 0;
-    background-image: url(../images/rude.webp);
-    background-size: cover;
-    transform: rotateY(180deg);
-    width: 148px;
-    height: 129px;
-}
-
-.contact_us__yellow {
-    position: absolute;
-    top: 560px;
-    left:0;
-    background-image: url(../images/yellow.webp);
-    background-size: cover;
-    transform: rotateY(180deg);
-    width: 173px;
-    height: 163px;
-}
-
-@media screen and (min-width:768px) {
-    .contact_us__rude {
-        transform: rotateY(10deg);
-        top: 360px;
-        left: 60%;
-    }    
-}
-
-@media screen and (min-width:768px) {
-    .contact_us__yellow {
-            top: 250px;
-            left: 80%;
-            transform: rotateY(10deg);
-        }}
-
-
-.contact_us-title{
-    margin-top: 176px;
-    font-weight: 800;
-    font-size: 52px;
-    line-height: 56px;
-    margin-bottom: 41px;
-        
-}
-.address-title{
-    margin-top: 26px;
-    margin-bottom: 16px;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 27px;
-}
-
-.address-description{
-    font-weight: 400;
-        font-size: 18px;
-        line-height: 27px;
-        margin-bottom: 16px;
-}
-
-.contact_us-warn{
-    font-weight: 500;
-        font-size: 20px;
-        line-height: 30px;
-        text-align: center;
-        letter-spacing: -0.01em;
-        text-transform: uppercase;
-        margin-top: 161px;
-}
-
-
-.footer-logo{
-    margin: 16px 0;
-}
-
-
-/* /////////////////////// */
- 
